--- a/games/chess-3d/index.html
+++ b/games/chess-3d/index.html
@@ -37,14 +37,14 @@
           </section>
           <section id="main" class="pane">
             <h1>3D Hartwig chess set</h1>
-            <p>done in HTML/CSS/JS by <a href="http://twitter.com/juliangarnier" target="_blank">@JulianGarnier</a></p>
+            <p>done in HTML/CSS/JS by JulianGarnier</p>
             <button type="button" class="btn white menu-nav" data-menu="themes">Themes
             <button type="button" id="continue" class="btn">Play
             <button type="button" class="btn white menu-nav" data-menu="about">About
           </section>
           <section id="about" class="pane">
             <h1>About</h1>
-            <p>Design and code by <a href="http://twitter.com/juliangarnier" target="_blank">@JulianGarnier</a></p>
+            <p>Design and code by JulianGarnier</p>
             <p>Works only in webkit.</p>
             <p>Licensed under the MIT license.</p>
             <p>Fork me on <a href="https://github.com/juliangarnier/3D-Artwig-chess-set" target="_blanc">Github<a></p>
