--- a/games/css-diner/index.html
+++ b/games/css-diner/index.html
@@ -120,7 +120,7 @@ p {
 
       <div class="what-is-this">
         <p>
-          Made by <a href="http://www.twitter.com/flukeout">@flukeout</a> &mdash; come say hi!
+          Made by @flukeout
         </p>
         <p>
           Have feedback or questions? Please file an issue on <a href="https://github.com/flukeout/css-diner/issues">the Github repo</a>.
